--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="listing_screen_title">Listing</string>
     <string name="bluetooth_screen_title">Bluetooth</string>
     <string name="profile_screen_title">Profile</string>
+
+    <string name="profile_screen_change_theme">Настройка темы</string>
+    <string name="profile_screen_call_support">Обратиться в поддержку</string>
+    <string name="profile_screen_log_out">Выйти из аккаунта</string>
 </resources>
